Fixed font on mobile.

--- a/source/stylesheets/hashicorp.css
+++ b/source/stylesheets/hashicorp.css
@@ -2649,7 +2649,7 @@ div.align-center {
     font-size: 44px;
   }
   .customers h1 {
-    font-size: 44px;
+    font-size: 35px;
     line-height: 48px;
   }
   #products #products-display .logos {
